--- a/CTGMod.csproj
+++ b/CTGMod.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="NetSimplified">
+      <HintPath>lib\NetSimplified.dll</HintPath>
+    </Reference>
     <Reference Include="StructureHelper">
       <HintPath>lib\StructureHelper.dll</HintPath>
     </Reference>
